force-app/main/default/objects/ZGRT14Report__c/fields/zyj__c.field-meta.xml
<CustomField>
    <fullName>zyj__c</fullName>
    <label>zyj</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>