force-app/main/default/objects/ZGRT14Report__c/fields/zyjsg__c.field-meta.xml
<CustomField>
    <fullName>zyjsg__c</fullName>
    <label>zyjsg</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>