force-app/main/default/objects/ZGRT14Report__c/fields/zyjzd__c.field-meta.xml
<CustomField>
    <fullName>zyjzd__c</fullName>
    <label>zyjzd</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>