force-app/main/default/objects/ZGRT14Report__c/fields/zzprodh1__c.field-meta.xml
<CustomField>
    <fullName>zzprodh1__c</fullName>
    <label>zzprodh1</label>
    <length>6</length>
    <type>Text</type>
</CustomField>