force-app/main/default/objects/ZGRT14Report__c/fields/zzprodh2__c.field-meta.xml
<CustomField>
    <fullName>zzprodh2__c</fullName>
    <label>zzprodh2</label>
    <length>6</length>
    <type>Text</type>
</CustomField>