force-app/main/default/objects/ZGRT14Report__c/fields/zzprodh4__c.field-meta.xml
<CustomField>
    <fullName>zzprodh4__c</fullName>
    <label>zzprodh4</label>
    <length>6</length>
    <type>Text</type>
</CustomField>